# asom

./: .gitignore  .oxlintrc.json  .prettierrc.cjs  .prettierrc.ts  AGENTS.md  README.md  app.vue  index.html  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.cursor/rules/: frontend.mdc
.github/workflows/: build.yaml  test-js.yaml  test-rust.yaml
api/: igb.ts  openedTabs.ts  rootPath.ts  tauriActions.ts  test.http
app/: app.vue
app/api/: rootPath.ts  tauriActions.ts
app/components/: AppRoot.vue  RouterMain.vue
app/composables/: index.ts  queries.ts  useApiConnections.ts  useDateAdapter.ts  useFileEditor.ts  useFileList.ts  useInputFocuser.ts  useListenToEvent.ts  useRustErrorNotifcation.ts  useTipTap.ts  useTools.ts  useTrottledEvents.ts  useViewLayout.ts  useViewSettings.ts
app/lib/: utils.ts
app/pages/: index.vue  preview.vue  testing.vue
app/types/: index.ts
app/utils/: cls.ts  configFiles.ts  configStoredInRootFolder.ts  configTiedToSchema.ts  defaultSchemas.ts  index.ts  sanitize-filename.ts  ui.ts
assets/css/: app.css  main.css  tailwind.css  tailwindcss-animate.css
components/BookView/: BookContextMenu.vue  BookItemDisplay.vue  BookViewWrapper.vue  BooksView.vue  SimpleDNDList.vue  TestDND.vue  helpers.ts  useFileList.ts
components/Cover/: BookCover.vue
components/DynamicView/: DropdownConfigMenu.vue  DynamicConfiguration.vue  RenderDynamic.vue  RenderDynamicEditor.vue  helpers.ts
composables/: queries.ts  useApiConnections.ts  useBookEditor.ts  useDateAdapter.ts  useFileEditor.ts  useFileList.ts  useFoldersList.ts  useInputFocuser.ts  useListenToEvent.ts  useRustErrorNotifcation.ts  useTools.ts  useViewLayout.ts  useViewSettings.ts
e2e/: basic.spec.ts  inputSetters.ts
layouts/: app.vue  empty.vue
lib/: utils.ts
modules/: shadcn.ts
pages/: application.vue  index.vue  preview.vue  testing.vue  welcome.vue
src/: App.tsx  Router.tsx  index.tsx  other.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  makefile  tauri.conf.json  tauri.macos.conf.json
src-tauri/bindings/: AttrValue.ts  BreadcrumbItem.ts  DateCollectionSettings.ts  DatePair.ts  DateSettings.ts  DatesPairCollectionSettings.ts  ErrFR.ts  ErrFrActionCode.ts  FileBreadCrumbs.ts  FileEventDataExisting.ts  FileEventDataRemoved.ts  FolderEventData.ts  FolderEventDataExisting.ts  FolderEventDataRemoved.ts  FolderEventEmit.ts  FolderListGetResult.ts  FolderOnDisk.ts  IPCEmitEvent.ts  IPCReadFileByPathResult.ts  IPCResponces.ts  ImageSettings.ts  InputSize.ts  NumberSettings.ts  NumberStyle.ts  RecordFromDb.ts  RecordListGetResult.ts  RecordReadResult.ts  RecordSaveResult.ts  Schema.ts  SchemaAttrType.ts  SchemaItem.ts  SchemaLoadList.ts  SchemaLocation.ts  SchemaResult.ts  SettingsTypeDate.ts  SettingsTypeDateCollection.ts  SettingsTypeDatesPairCollection.ts  SettingsTypeImage.ts  SettingsTypeNumber.ts  SettingsTypeText.ts  (+7 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: emitter.rs  lib.rs
src-tauri/src/cache/: cache_thing.rs  create_tables.rs  dbconn.rs  mod.rs  query.rs  tables.rs  write.rs
src-tauri/src/core/: core.rs  core_state.rs  mod.rs  root_storage.rs
src-tauri/src/files/: io.rs  metadata.rs  mod.rs  read_save.rs  utils.rs
src-tauri/src/schema/: defaults.rs  mod.rs  operations.rs  schema_cache.rs  types.rs
src-tauri/src/tests/: cache_tests.rs  core_tests.rs  io_tests.rs  mod.rs  stress_tests.rs  test_utils.rs
src-tauri/src/tests/cases/basic/books/: How to Read a Book.md  How to Take Smart Notes.md  schema.yaml
src-tauri/src/tests/cases/basic/books/.asom/: schema.yaml
src-tauri/src/tests/cases/nested/books/.asom/: schema.yaml
src-tauri/src/tests/cases/nested/books/audiobooks/: Sample Audiobook.md
src-tauri/src/tests/cases/nested/books/audiobooks/.asom/: schema.yaml
src-tauri/src/tests/cases/nested/movies/: schema.yaml
src-tauri/src/tests/cases/nested/movies/.asom/: schema.yaml
src-tauri/src/tests/cases/nested/noschema/nestno/: Cool Movie.md
src-tauri/src/utils/: errorhandling.rs  global_app.rs  helpers.rs  internal_path.rs  mod.rs  utils.rs
src-tauri/src/watcher/: event_handler.rs  event_handlers.rs  events_process.rs  global_watcher.rs  mod.rs  monitor_process.rs  watcher_process.rs
types/: index.ts  rename.ts
utils/: configStoredInRootFolder.ts  configTiedToSchema.ts  defaultSchemas.ts  goodreadsHTMLParser.ts  settingsStore.ts  store.ts  uniqIdGenerator.ts
vue/: app.vue
(+450 files in other folders)
