[package]
name = "asom"
version = "0.2.9"
description = "Anti Social Opinion Manager"
authors = ["Kirill Kleimenov"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = "0.4.42"
fs_extra = "1.3.0"
governor = "0.10.1"
log = "0.4"
notify = "8.0.0"
once_cell = "1.21.3"
pathdiff = "0.2.3"
pretty_assertions = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
serde_yml = "0.0.12"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros", ] }
tauri = { version = "2.8.5", features = ["protocol-asset", "test"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = { version = "2.4.2", features = ["watch"] }
tauri-plugin-http = "2.5.2"
tauri-plugin-log = "2.7.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.0"
tokio = { version = "1", features = ["sync"] }
trash = "5.2.3"
ts-rs = { version = "11.0.1", features = ["serde-compat", "serde-json-impl"] }
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dev-dependencies]
tempfile = "3.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
