[package]
name = "asom"
version = "0.2.10"
description = "Anti Social Opinion Manager"
authors = ["Kirill Kleimenov"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = "0.4"
fs_extra = "1.3"
governor = "0.10"
log = "0.4"
notify = "8"
once_cell = "1"
pathdiff = "0.2"
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yml = "0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros", ] }
tauri = { version = "2", features = ["protocol-asset", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tokio = { version = "1", features = ["sync"] }
trash = "5"
ts-rs = { version = "11", features = ["serde-compat", "serde-json-impl"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.23"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
